// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto produces correct array of computed placements 1`] = `
Array [
  "top",
  "bottom",
  "right",
  "left",
]
`;

exports[`auto-end produces correct array of computed placements 1`] = `
Array [
  "top-start",
  "top-end",
  "bottom-start",
  "bottom-end",
  "right-start",
  "right-end",
  "left-start",
  "left-end",
]
`;

exports[`auto-end produces correct array of computed placements when flipVariations: false 1`] = `
Array [
  "top-end",
  "bottom-end",
  "right-end",
  "left-end",
]
`;

exports[`auto-start produces correct array of computed placements 1`] = `
Array [
  "top-start",
  "top-end",
  "bottom-start",
  "bottom-end",
  "right-start",
  "right-end",
  "left-start",
  "left-end",
]
`;

exports[`auto-start produces correct array of computed placements when flipVariations: false 1`] = `
Array [
  "top-start",
  "bottom-start",
  "right-start",
  "left-start",
]
`;
